2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Get STRICT
	as an argument in the stack and use it after executing the
	constraint.
	(handle_struct_field_constraints): Let
	check_struct_field_constraint handle STRICT.
	(struct_constructor): Pass a STRICT to
	check_struct_field_constraint.
	* testsuite/poke.map/nsmap-7.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
	* doc/poke.texi (Working with Incorrect Data): Document new
	behavior.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Auto-complete fields foo->bar): New entry.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (find_field_referrer): New function.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Alien tokens for IO space names: $<path/to/file>):
	Remove as done.
	(Auto-complete $<...> in the prompt): New todo.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm-insns-test.pk: Add tests for instructions
	`sconc', `and', `or', and `not'.

2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>a

	* libpoke/pkl-promo.c (promote_array): Fix bounded array fast
	path.
	* testsuite/poke.pkl/promo-array-return-6.pk: New test.
	* testsuite/poke.pkl/add-arrays-4.pk: Fix test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (iosearch): New function.
	* testsuite/poke.pkl/iosearch-1.pk: New test.
	* testsuite/poke.pkl/iosearch-2.pk: Likewise.
	* testsuite/poke.pkl/iosearch-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (iosearch): New section.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/ios-2.pk: New test.
	* testsuite/poke.cmd/ios-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.c (pk_ios_init): New function.
	(pk_ios_shutdown): Likewise.