@@ -1,3 +1,11 @@
+2023-05-19  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-tab.y (deftype): Do not share identifier node
+	between declaration and types.
+	* testsuite/poke.pkl/deftype-2.pk: New test.
+	* testsuite/poke.pkl/deftype-3.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
 2023-05-18  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-gen.pks (check_struct_field_constraint): Get STRICT
